--- a/modules/ROOT/pages/maintenance/b-r/restore.adoc
+++ b/modules/ROOT/pages/maintenance/b-r/restore.adoc
@@ -28,7 +28,7 @@ When it comes to restoring data, keep in mind that you always have to restore al
 
 {empty}
 
-(2) ... For POSIX-only environments, the location for blobs and metadata is the same. When using S3, the location differs. Note when using the `extended attributes` (xattr) backend for metadata, see xref:prerequisites/prerequisites.adoc#filesystems-and-shared-storage[Filesystems and Shared Storage], the restore process must include these attributes.
+(2) ... For POSIX-only environments, the location for blobs and metadata is the same. When using S3, the location differs. The restore process must include the metadata, for details see xref:prerequisites/prerequisites.adoc#filesystems-and-shared-storage[Filesystems and Shared Storage].
 
 Valid for all restore procedures:
 
