--- a/modules/ROOT/pages/prerequisites/prerequisites.adoc
+++ b/modules/ROOT/pages/prerequisites/prerequisites.adoc
@@ -20,6 +20,8 @@
 :apache_rev_url: https://httpd.apache.org/docs/2.4/howto/reverse_proxy.html
 :what_is_apache_url: https://www.apache.org/
 
+:messagepack: https://msgpack.org/index.html
+
 == Introduction
 
 {description}
@@ -273,9 +275,9 @@ Infinite Scale defines drivers for filesystems to store blobs and metadata. The 
 
 === Backend for Metadata
 
-With regards to metadata and independent of the filesystem driver used, the way how metadata is stored can be configured as .ini files (`ini`) or extended attributes (`xattrs`) which requires a filesystem supporting it. The `ini` backend is introduced with Infinite Scale 3.0 and is the default since then. Pre 3.0 installations will need to convert the `xattrs` backend to `ini` if required.
+Starting with Infinte Scale 3.0, metadata is stored as {messagepack}[messagepack] files. Messagepack files have as filetype `.mpk`, contain compressed JSON data, are compact and fast. There is also no limit in metadata stored for one mpk file which makes using messagepack futureproof. Using messagepack allows the use of standard filesystems, see the supported list below.
 
-When using the `xattrs` backend and when listing the extended attributes of an object, the available space is currently limited to 64kB. Assuming a 20 byte uuid, a grant has ~40 bytes, which would limit the number of attributes to ~1630 entries or ~1600 shares per extended attribute.
+If you have started to use Infinite Scale before version 3.0, metadata was stored in extended attributes (`xattrs`) and is converted with the upgrade automatically.
 
 === Available Filesystem Drivers
 
@@ -324,70 +326,13 @@ The supported Infinite Scale POSIX-compliant filesystems are the following. Note
 | The block size depends on the `rsize` parameter in the mount options. Defaults to 4K, usually set to 32K.
 |===
 
-Check if extended attributes are supported if selected as metadata backend::
---
-When selecting the `xattrs` backend for storing metadata, the used POSIX-compliant filesystem from the tables above must support it. You can check this with the following commands, change to a location in the mounted filesystem you want to check before:
-
-[source,bash]
-----
-touch foo.txt && attr -s mix -V bar foo.txt
-----
-
-[source,plaintext]
-----
-Attribute "mix" set to a 3 byte value for foo.txt:
-bar
-----
-
-[source,bash]
-----
-attr -g mix foo.txt
-----
-
-[source,plaintext]
-----
-Attribute "mix" had a 3 byte value for foo.txt:
-bar
-----
-
-[source,bash]
-----
-rm foo.txt
-----
---
-
-[[nfs_notes_prerequisites]]
-NFS Notes::
+Extended Attributes::
 +
-[NOTE]
+[IMPORTANT]
 ====
-When using NFS and the `xattrs` backend, you have to take care that the NFS server *AND* the NFS client provides `Extended Attributes`.
+Only when using Infinite Scale _before_ version 3.0.
 
-NFS Storage Based on Linux Servers::
-When using a kernel version 5.9 or higher, extended attributes for the NFS server and the NFS client are part of the system. To check, run the command:
-+
-[source,bash]
-----
-uname -r
-----
-+
-On the system providing the NFS server AND on the NFS client check the displayed version number.
-
-NFS Client::
-If you have an NFS server capable of extended attributes but you are unsure if your client accessing the server supports it, check the *nfs-utils* or *nfs-common* package version of your NFS client with the command:
-+
-[source,bash]
-----
-mount.nfs -V
-----
-+
-You need at minimum NFS version 2.6.1. For more details see the general {nfs-utils-url}[NFS Utils Release History] and the {ubuntu-nfs-url}[Ubuntu nfs-common Packages].
-
-NFS Servers Provided from Storage Vendors::
-A certification matrix will be provided when available.
-
-NFS Protocol Version::
-Note that if the kernel or the storage system supports extended attributes, you have to use *NFSv4* in order to use it.
+* See the documentation and notes about xref:prerequisites/xattrs.adoc[Extended Attributes] for metadata.  
 ====
 
 Ceph Notes::
